[gd_scene load_steps=43 format=3]

[ext_resource type="Script" path="res://Script/LDL/ldl.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://m2mf7ndsvior" path="res://Art/LDL/85.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bp40ouacjtjia" path="res://Art/LDL/100.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bul7c83s8qst0" path="res://Art/LDL/114.png" id="4"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="5"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="6"]
[ext_resource type="PackedScene" uid="uid://dxwcpwo7vb0k8" path="res://Scene/BackPack/Main_Backpack.tscn" id="7"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[sub_resource type="StyleBoxEmpty" id="16"]
script = null

[sub_resource type="StyleBoxEmpty" id="17"]
script = null

[sub_resource type="StyleBoxEmpty" id="18"]
script = null

[sub_resource type="StyleBoxEmpty" id="19"]
script = null

[sub_resource type="StyleBoxEmpty" id="20"]
script = null

[sub_resource type="StyleBoxEmpty" id="21"]
script = null

[sub_resource type="StyleBoxEmpty" id="22"]
script = null

[sub_resource type="StyleBoxEmpty" id="23"]
script = null

[sub_resource type="StyleBoxEmpty" id="24"]
script = null

[sub_resource type="StyleBoxEmpty" id="25"]
script = null

[sub_resource type="StyleBoxEmpty" id="26"]
script = null

[sub_resource type="StyleBoxEmpty" id="27"]
script = null

[sub_resource type="StyleBoxEmpty" id="28"]
script = null

[sub_resource type="StyleBoxEmpty" id="29"]
script = null

[sub_resource type="StyleBoxEmpty" id="30"]
script = null

[sub_resource type="StyleBoxEmpty" id="31"]
script = null

[sub_resource type="StyleBoxEmpty" id="32"]
script = null

[sub_resource type="StyleBoxEmpty" id="33"]
script = null

[sub_resource type="StyleBoxEmpty" id="34"]
script = null

[sub_resource type="StyleBoxEmpty" id="35"]
script = null

[node name="ldl" type="Node2D"]
process_mode = 3
script = ExtResource( "1" )

[node name="fengeceng" type="ColorRect" parent="."]
offset_right = 939.0
offset_bottom = 589.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(470, 295)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="bg2" type="Sprite2D" parent="bg"]
position = Vector2(12, 33)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="bg3" type="Sprite2D" parent="bg/bg2"]
position = Vector2(-3, -20)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="lh" type="Label" parent="bg/bg2"]
offset_left = 316.0
offset_top = 226.0
offset_right = 447.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource( "5" )
theme_override_font_sizes/font_size = 19
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="return" type="Button" parent="."]
offset_left = 844.0
offset_top = 12.0
offset_right = 898.0
offset_bottom = 32.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "返 回"
metadata/_edit_lock_ = true

[node name="hc" type="Button" parent="."]
offset_left = 140.0
offset_top = 550.0
offset_right = 190.0
offset_bottom = 576.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "合成"
metadata/_edit_lock_ = true

[node name="qh" type="Button" parent="."]
offset_left = 70.0
offset_top = 550.0
offset_right = 120.0
offset_bottom = 576.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "强化"
metadata/_edit_lock_ = true

[node name="xq" type="Button" parent="."]
offset_left = 210.0
offset_top = 550.0
offset_right = 260.0
offset_bottom = 576.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "16" )
theme_override_styles/hover = SubResource( "17" )
theme_override_styles/pressed = SubResource( "18" )
theme_override_styles/disabled = SubResource( "19" )
theme_override_styles/focus = SubResource( "20" )
text = "镶嵌"
metadata/_edit_lock_ = true

[node name="hh" type="Button" parent="."]
offset_left = 280.0
offset_top = 550.0
offset_right = 330.0
offset_bottom = 576.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "21" )
theme_override_styles/hover = SubResource( "22" )
theme_override_styles/pressed = SubResource( "23" )
theme_override_styles/disabled = SubResource( "24" )
theme_override_styles/focus = SubResource( "25" )
text = "幻化"
metadata/_edit_lock_ = true

[node name="fj" type="Button" parent="."]
offset_left = 344.0
offset_top = 547.0
offset_right = 394.0
offset_bottom = 578.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "26" )
theme_override_styles/hover = SubResource( "27" )
theme_override_styles/pressed = SubResource( "28" )
theme_override_styles/disabled = SubResource( "29" )
theme_override_styles/focus = SubResource( "30" )
text = "分解"
metadata/_edit_lock_ = true

[node name="dz" type="Button" parent="."]
offset_left = 409.0
offset_top = 547.0
offset_right = 459.0
offset_bottom = 578.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "31" )
theme_override_styles/hover = SubResource( "32" )
theme_override_styles/pressed = SubResource( "33" )
theme_override_styles/disabled = SubResource( "34" )
theme_override_styles/focus = SubResource( "35" )
text = "打造"
metadata/_edit_lock_ = true

[node name="Main_Backpack" parent="." instance=ExtResource( "7" )]
offset_left = 661.0
offset_top = 305.0
offset_right = 661.0
offset_bottom = 305.0

[connection signal="pressed" from="return" to="." method="_on_return_pressed" flags=18]
[connection signal="pressed" from="hc" to="." method="_on_hc_pressed" flags=18]
[connection signal="pressed" from="qh" to="." method="_on_qh_pressed" flags=18]
[connection signal="pressed" from="xq" to="." method="_on_xq_pressed" flags=18]
[connection signal="pressed" from="hh" to="." method="_on_hh_pressed" flags=18]
[connection signal="pressed" from="fj" to="." method="_on_fj_pressed" flags=18]
[connection signal="pressed" from="dz" to="." method="_on_dz_pressed" flags=18]

[editable path="Main_Backpack"]
